# multimodal-evidence-alignment

./: LICENSE  README.md  pyproject.toml
configs/: feature_registry.yaml  harness_config.yaml  llm_config.yaml
docs/: architecture.md  data-format.md  extending.md  index.md  quickstart.md
examples/custom_dataset/: run_example.py
harness/: __init__.py  cli.py  clinical.py  config.py  harness.py  llm_client.py
harness/evaluation/: __init__.py  statistical_utils.py
harness/llm/: __init__.py
harness/reasoners/: __init__.py  evidence_chain.py  prompts.py
harness/registry/: feature.py
harness/registry/extractors/: __init__.py  builtin.py
harness/report/: consistency.py  keyframe.py  report_generator.py
harness/slots/: __init__.py  audit_trail.py  backends.py  evidence_store.py  feedback_store.py
harness/tools/: __init__.py  aggregator.py
harness/validators/: __init__.py  gate.py  schema.py
tests/: test_integration.py  test_llm_e2e.py  test_statistical_utils.py
